tests/ui/invalid_intern_arg.stderr
error[E0435]: attempt to use a non-constant value in a constant
   --> tests/ui/invalid_intern_arg.rs:5:53
    |
  5 |     Python::attach(|py| py.import(pyo3::intern!(py, _foo)).unwrap().unbind());
    |                                                     ^^^^ non-constant value
    |
help: consider using `let` instead of `static`
 --> src/sync.rs
  |
  -         static INTERNED: $crate::sync::Interned = $crate::sync::Interned::new($text);
  +         let INTERNED: $crate::sync::Interned = $crate::sync::Interned::new($text);
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
